# continuum

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: CONTINUUM_INTENT_DOC.md  CONTINUUM_REACT_SHELL_OPTION_SPEC.md  CONTINUUM_V1_ARCH_SPEC.md  command-guide.md  plugin-quickstart.md  plugin-ui-development.md
docs/plans/: 002-dynamic-plugin-ui-loading.md  003-theme-selector-plugin.md  003-theme-system.md  V1_IMPLEMENTATION_PLAN.md  react-shell-implementation-plan.md
docs/rca/: 001-plugin-component-loading.md
plugins/continuum.sample_chat/: __init__.py  plugin.toml
plugins/continuum.sample_chat/ui/: package-lock.json  package.json
plugins/continuum.sample_chat/ui/src/: ChatDrawer.svelte  index.js
plugins/continuum.sample_command/: __init__.py  plugin.toml
plugins/continuum.sample_diagnostics/: __init__.py  plugin.toml
plugins/continuum.sample_nav/: __init__.py  plugin.toml
plugins/continuum.sample_signal/: __init__.py  plugin.toml
plugins/continuum.sample_signal/ui/: package-lock.json  package.json  vite.config.js
plugins/continuum.sample_signal/ui/src/: SignalAlerts.svelte  SignalMetrics.svelte  SignalTimeline.svelte  (+1 more)
plugins/continuum.sample_systems/: __init__.py  plugin.toml
plugins/continuum.sample_systems/ui/: package-lock.json  package.json
scripts/: build-plugins.sh  check-plugin-coupling.sh
src/continuum/: __init__.py  cli.py  main.py
src/continuum/app/: __init__.py  adapters.py  command_bus.py  discovery.py  loader.py  registry.py  runtime.py
src/continuum/domain/: __init__.py  auth.py  commands.py  contributions.py  events.py  lifecycle.py  manifest.py  perspectives.py  regions.py  themes.py
tests/: conftest.py  test_acceptance.py  test_commands.py  test_plugin_loading.py  test_plugin_system.py  test_smoke.py
tests/visual/: sample_dashboard.html  test_sample_dashboard.py
web/: package-lock.json  package.json  svelte.config.js  vite.config.ts
web/.svelte-kit/: ambient.d.ts  tsconfig.json
web/src/: app.css  app.d.ts  app.html
web/src/lib/: index.ts
web/src/routes/: +page.svelte
(+29 files in other folders)
