[project]
name = "continuum"
version = "0.1.0"
description = "Plugin-driven control-plane UI shell"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "tomli>=2.0.0",
    "jsonschema>=4.21.0",
    "httpx>=0.26.0",
    # Switchboard - use git reference for CI/production
    # For local dev, install with: pip install -e ~/Code/switchboard
    # "switchboard @ git+https://github.com/<owner>/switchboard.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.26.0",
    "requests>=2.31",
    "pytest-playwright>=0.7",
    "ruff>=0.2",
    "mypy>=1.8",
]

[project.scripts]
continuum = "continuum.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/continuum"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
